# fourier_analysis

./: .dockerignore  .env.example  .gitignore  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: Dockerfile  config.py  dependencies.py  main.py  responses.py
api/models/: assets.py  computation.py  equations.py  gallery.py  session.py
api/routers/: admin.py  compute.py  equations.py  gallery.py  images.py  sessions.py
api/services/: computation.py  database.py  image_storage.py  janitor.py  rate_limiter.py
examples/: anim_convergence.py  anim_fourier_portrait.py  anim_gibbs.py
nginx/: fourier.conf
paper/: fourier_paper.aux  fourier_paper.bbl  fourier_paper.bib  fourier_paper.tex  fourier_paper.toc
scripts/: deploy.sh  dev.sh  precompute_nav_icons.py
src/fourier_analysis/: __init__.py  animation.py  bases.py  cli.py  cli_plotting.py  contours.py  epicycles.py  fft_backend.py  series.py  shortest_tour.py
src/fourier_analysis/contours/: __init__.py  assembly.py  candidates.py  extraction.py  features.py  geometry.py  image.py  (+9 more)
tests/: test_bases.py  test_contour_ml.py  test_contours.py  test_epicycles.py  test_fft_backend.py  test_series.py  test_shortest_tour.py
web/: Dockerfile  components.json  env.d.ts  index.html  mkbabb-latex-paper-0.1.0.tgz  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/e2e/: contour-extraction.spec.ts  paper-performance.spec.ts  workspace-flow.spec.ts
web/plugins/: tsconfig.json  vite-plugin-latex-paper.ts
web/public/: assets
web/src/: App.vue  style.css  virtual-paper.d.ts
(+121 files in other folders)
