[project]
name = "fourier-analysis"
version = "0.1.0"
description = "Companion code for 'An Introduction to Fourier Analysis'"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-image>=0.22",
    "Pillow>=10.0",
    "scipy>=1.12",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "motor>=3.6",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
    "aiofiles>=24.1",
    "cachetools>=5.5",
    "coolname>=2.2",
    "pydantic-settings>=2.7",
]

[project.scripts]
fourier = "fourier_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fourier_analysis"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
